# mip-package-manager

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  mip.m  mip.yaml  pyproject.toml  setup.py  test.m
+mip/: arch.m  avail.m  bundle.m  compile.m  find_name_collisions.m  index.m  info.m  init.m  install.m  list.m  load.m  pin.m  root.m  test.m  uninstall.m  unload.m  unpin.m  update.m  version.m
docs/: behavior-reference-cheat-sheet.md  behavior-reference.md  specification-high-level.md  specification.md  usage-guide.md
matlab/: .gitignore  README.md  mip.m
mip/: __init__.py  __main__.py  commands.py
mip_client/: __init__.py  __main__.py  commands.py  mip.m
mip_package_manager/: __init__.py
old_scripts/: build_chebfun.py  build_export_fig.py  build_flam.py  build_fmm2d.py  build_helpers.py  build_kdtree.py  build_surfacefun.py  generate_manifest.py  kdtree_compile_cpp14.m
python/: .gitignore  CHANGELOG.md
scripts/: build_chebfun.py  build_export_fig.py  build_flam.py  build_kdtree.py  build_surfacefun.py  prepare_chebfun.py  prepare_export_fig.py  prepare_flam.py  prepare_surfacefun.py
tests/: TestBrokenDependencyWarning.m  TestBundleCommand.m  TestChannelInstall.m  TestCompareVersions.m  TestCompile.m  TestCreatePathScripts.m  TestDownloadMhl.m  TestDownloadMhlSha256.m  TestExtractMhl.m  TestFetchIndexCache.m  TestFetchIndexCacheRemote.m  TestFindAllDependencies.m  TestFunctionSignatures.m  TestIndexCommand.m  TestIndexUrl.m  TestInfoPackage.m  TestInfoSelf.m  TestInit.m  TestInstallEquivalentFqn.m  TestInstallExtraPaths.m  TestMipRoot.m  (+39 more)
(+186 files in other folders)
