[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mip-client"
version = "0.1.0"
description = "pip-style package manager for MATLAB packages"
readme = "README.md"
authors = [
    {name = "Jeremy Magland"},
    {name = "Dan Fortunato"}
]
license = {text = "Apache License 2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
]
keywords = ["matlab", "package-manager"]
requires-python = ">=3.6"
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/mip-org/mip"
Repository = "https://github.com/mip-org/mip"
Issues = "https://github.com/mip-org/mip/issues"

[project.scripts]
mip = "mip_client.__main__:main"

[tool.setuptools]
packages = ["mip_client"]
include-package-data = true

[tool.setuptools.package-data]
mip_client = ["+mip/*.m", "mip.m"]
